--- a/starbank/src/app/domains/pages/cardmenu/pages/services/services.component.html
+++ b/starbank/src/app/domains/pages/cardmenu/pages/services/services.component.html
@@ -11,7 +11,7 @@
           {
             <li>
               <div class="button-container">
-                  <button class="service-button">
+                  <button class="service-button" (click)="redireccionarClick(service.name)">
                     <div class="service-content">
                       <p>{{service.name}}</p>
                     </div>
