--- a/starbank/src/app/domains/pages/creditsmenu/pages/creditcard/creditcard.component.html
+++ b/starbank/src/app/domains/pages/creditsmenu/pages/creditcard/creditcard.component.html
@@ -1,20 +1,1 @@
-<body>
-  <div class="fullcolor">
-    <div class="content-center">
-      <h1>PAGO DE CREDITO</h1>
-      <form >
-        <p>Limite de credito {{tdc?.creditLimit}}</p>
-        <p>Credito disponible{{tdc?.creditAvailable}}</p>
-
-        <div class="form-group">
-          <div>
-            <label for="pago">Monto a pagar:</label>
-          </div>
-          <div>
-            <input type="button" [value]="pago" placeholder="Dígite el monto a pagar">
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</body>
+<p>Hola</p>
