--- a/starbank/src/app/domains/pages/cardmenu/pages/deposit/deposit.component.html
+++ b/starbank/src/app/domains/pages/cardmenu/pages/deposit/deposit.component.html
@@ -8,7 +8,7 @@
           @if(alertaDivisor)
           {
             <div class="error-message">
-              <p>        Cantidad a retirar no válida.        </p>
+              <p>        Cantidad a depositar no válida.        </p>
             </div>
           }
           <form>
