--- a/starbank/src/app/domains/pages/home/home.component.html
+++ b/starbank/src/app/domains/pages/home/home.component.html
@@ -10,7 +10,7 @@
       <div class="align-middle">
         <ul style="text-align: center;">
           <li style="display: inline-block; margin-right: 10px;">
-            <a routerLink="/cardlogin" class="button">Ingresar con tarjeta</a>
+            <a routerLink="cards/cardlogin" class="button">Ingresar con tarjeta</a>
           </li>
           <li style="display: inline-block;">
             <a routerLink="/servicecode" class="button">Pagar servicios</a>
