--- a/starbank/src/app/domains/shared/components/nota/nota.component.css
+++ b/starbank/src/app/domains/shared/components/nota/nota.component.css
@@ -1,8 +1,10 @@
-body {
-  background-color: #6cc09c; /* Color de fondo principal, verde más suave */
-  margin: 0; /* Elimina el margen predeterminado */
-  font-family: Arial, sans-serif; /* Tipo de fuente para el texto */
-  line-height: 1.6; /* Espaciado entre líneas */
+.atm-menu {
+  background-color: #6cc09c;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 100vh;
+  padding-top: 50px;
 }
 .login-container {
   width: 300px;
@@ -69,7 +71,6 @@ h2 {
 }
 
 
-
 .content-center {
   text-align: center;
   margin-bottom: 20px;
@@ -121,13 +122,18 @@ a:hover {
 .salir {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #ff0000; /* Color de fondo */
-  color: #ffffff; /* Color del texto */
-  text-decoration: none; /* Quita el subrayado del enlace */
-  border-radius: 5px; /* Borde redondeado */
-  transition: background-color 0.3s; /* Transición suave para el cambio de color de fondo */
+  background-color: #ff0000;
+  color: #ffffff;
+  border-radius: 5px;
+  text-align: center;
+  transition: background-color 0.3s;
+  margin-top: 5px;
+  width: 200px;
+  height: 60px;
+
 }
 
 .salir:hover {
   background-color: #cc0000; /* Color de fondo al pasar el mouse */
 }
+
