--- a/starbank/src/app/domains/shared/components/nota/nota.component.html
+++ b/starbank/src/app/domains/shared/components/nota/nota.component.html
@@ -1,21 +1,19 @@
-<div class="content-center">
+<div class="atm-menu">
   <div class="login-container">
-
-    <form >
-      <div class="form-group">
-        <div class="content-center">
-          <h2>Retiro</h2>
-          <h3>START BANK ATM</h3>
-          <p>Tarjeta: {{mov?.card}}</p>
-          <p>Sucursal: San Roque</p>
-          <p>{{movimiento}} de : {{mov?.new_balance}}$</p>
-          <p><i class="fas fa-clock timer-icon"></i> Cerrando sesión en <span>{{ tiempoRestante }}</span> segundos</p>
+    <div class="content-center">
+      <form >
+        <div class="form-group">
+            <h2>Retiro</h2>
+            <h3>START BANK ATM</h3>
+            <p>Tarjeta: {{mov?.card}}</p>
+            <p>Sucursal: San Roque</p>
+            <p>{{movimiento}} de : {{mov?.new_balance}}$</p>
+            <p><i class="fas fa-clock timer-icon"></i> Cerrando sesión en <span>{{ tiempoRestante }}</span> segundos</p>
+          <a href="/" class="salir">Salir</a>
+          <a href="/cards" class="salir">Seguir realizando transacciones</a>
         </div>
-        <a href="/" class="salir">Salir</a>
-        <a href="/cards" class="salir">Seguir realizando transacciones</a>
-
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </div>
 
