Cambios en el api y servicios

--- a/starbank/src/app/domains/pages/cardmenu/cardmenu.component.html
+++ b/starbank/src/app/domains/pages/cardmenu/cardmenu.component.html
@@ -36,12 +36,11 @@
               <a routerLink="/cards/changenip" class="button">Cambiar nip</a>
             </li>
             <li>
-              <a routerLink="/cards/statement" class="button">Estado de cuenta</a>
+              <a routerLink="/cards/statement" class="button" (click)="verEstadoCuenta()">Estado de cuenta</a>
             </li>
             <li>
               <a routerLink="/" class="button">Regresar</a>
             </li>
-
           </ul>
         </div>
       </div>
