--- a/starbank/src/app/domains/pages/cardmenu/pages/services/pages/japay/japay.component.html
+++ b/starbank/src/app/domains/pages/cardmenu/pages/services/pages/japay/japay.component.html
@@ -1,16 +1,24 @@
 
 <div class="atm-menu">
-  <p>japay works!</p>
+  <div class="content-center">
+    <div class="container-right">
+      <div class="operaciones-container">
+        @if (servicio != null)
+        {
+          <p> {{servicio.name}} </p>
+          <h2>Tipo de servicio: {{servicio.typeService}}</h2>
+          <h2>Plan: {{ servicio.cost }}</h2>
+          <h2>Por pagar: {{ servicio.debt }}</h2>
+          <h2>ID de contrato: {{ servicio.contract }}</h2>
+          <h2>ID de usuario: {{ servicio.id_user }}</h2>
+          <h2>Código de servicio: {{servicio.service_code}}</h2>
+        }
 
+        <button (click)="redirigirEfectivo()">Pagar en efectivo</button>
+        <button>Pagar con tarjeta</button>
+        <a class="regresar-btn" (click)="regresar()">Regresar</a>
 
-    @if (servicio != null)
-    {
-      <p>{{ servicio.cost }}</p>
-      <p>{{ servicio.contract }}</p>
-      <p>{{ servicio.id_user }}</p>
-      <p>{{servicio.service_code}}</p>
-      <p>{{servicio.typeService}}</p>
-      <p>{{servicio.name}}</p>
-    }
-
+      </div>
+    </div>
+  </div>
 </div>
