--- a/starbank/src/app/domains/pages/cardmenu/pages/services/pages/telmex/telmex.component.css
+++ b/starbank/src/app/domains/pages/cardmenu/pages/services/pages/telmex/telmex.component.css
@@ -5,9 +5,13 @@ body {
   line-height: 1.6;
 }
 
-.content-center {
-  text-align: center;
-  margin-bottom: 20px;
+.content-center
+{
+  font-size: 36px;
+  font-weight: bold;
+  color: #333;
+  text-transform: uppercase;
+  letter-spacing: 2px;  color: #fff;
 }
 
 
@@ -82,4 +86,51 @@ p{
   background-color: #6cc09c;
   min-height: 100vh;
   padding-top: 50px;
+}
+
+.container-right .operaciones-container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.container-right h2 {
+  margin-top: 0;
+  color: #333;
+  font-size: 24px;
+}
+
+.container-right button {
+  padding: 12px 24px;
+  font-size: 18px;
+  margin: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.container-right button:hover {
+  background-color: #0056b3;
+}
+
+.regresar-btn {
+  display: inline-block;
+  padding: 12px 24px;
+  font-size: 18px;
+  margin: 10px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.regresar-btn:hover {
+  background-color: #555;
 }
