--- a/starbank/src/app/domains/pages/cardmenu/pages/services/services.component.css
+++ b/starbank/src/app/domains/pages/cardmenu/pages/services/services.component.css
@@ -27,6 +27,7 @@ body {
 }
 
 .service-button {
+  margin-left: 5px;
   border: 2px solid #2f6648;
   border-radius: 5px;
   background-color: #9bd4af;
