Pagos de servicios con tarjeta y efectivo

--- a/starbank/src/app/domains/pages/cardmenu/pages/services/pages/netflix/netflix.component.html
+++ b/starbank/src/app/domains/pages/cardmenu/pages/services/pages/netflix/netflix.component.html
@@ -16,7 +16,7 @@
         }
 
         <button (click)="redirigirEfectivo()">Pagar en efectivo</button>
-        <button>Pagar con tarjeta</button>
+        <button (click)="descontarTarjeta()">Pagar con tarjeta</button>
         <a class="regresar-btn" (click)="regresar()">Regresar</a>
 
       </div>
