Cambios para creditos generales

--- a/starbank/src/app/domains/pages/cardmenu/pages/statement/statement.component.html
+++ b/starbank/src/app/domains/pages/cardmenu/pages/statement/statement.component.html
@@ -1,12 +1,12 @@
 <div class="atm-menu">
   <section class="">
-    <h2>Estado de Cuenta</h2>
     <div>
       <select name="orden" id="">
-        <option (click)="cambiarOrden(1)">Ascendente</option>
-        <option (click)="cambiarOrden(0)">Descendente</option>
+        <option (click)="cambiarOrden('asc')">Ascendente</option>
+        <option (click)="cambiarOrden('desc')">Descendente</option>
       </select>
     </div>
+    <h2>Estado de Cuenta</h2>
     <table>
         <thead>
             <tr>
@@ -25,7 +25,9 @@
         </tbody>
     </table>
   </section>
-
+  <div class="texto">
+    <p> No se paga anualidad, por lo que sólo se paga por el interés por no pagar completo. CAT de 96.5%</p>
+  </div>
   <div class="button-container">
     <li>
       <a routerLink="/cards" class="service-button">Menú anterior</a>
