--- a/starbank/src/app/domains/pages/cardmenu/pages/statement/statement.component.css
+++ b/starbank/src/app/domains/pages/cardmenu/pages/statement/statement.component.css
@@ -55,3 +55,10 @@ th {
   align-items: center;
   margin-top: 20px; /* Espacio superior para separar del título */
 }
+
+.texto{
+  max-width: 100px;
+  background-color: #f2f2f2;
+  margin-left: 50px;
+  margin-top: 80px;
+}
