--- a/starbank/src/app/domains/pages/creditsmenu/pages/car-credit/car-credit.component.html
+++ b/starbank/src/app/domains/pages/creditsmenu/pages/car-credit/car-credit.component.html
@@ -1,12 +1,37 @@
-<div class="fullcolor">
-  <div class="login-container">
-    <h2>Crédito de carro</h2>
-    <img src="../../../../../../assets/logo.png" alt="Logo">
 
-    <form>
-      <input type="text" [value]="dinero()"  placeholder="Monto a pagar">
-      <button type="submit">Pagar</button>
-      <button type="button" class="cancel-button" (click)="cancelar()">Cancelar</button>
-    </form>
+
+<div class="atm-menu">
+  <div class="content-center">
+    <h1>Pago de crédito</h1>
+    <div class="showtop">
+      <div class="form-group">
+        <p>Meses faltantes : {{ 2 }}</p>
+        <p>Credito disponible : {{ 2 }}</p>
+        <p>Saldo por pagar: {{ 2 }}</p>
+      </div>
+    </div>
+    <div class="login-container">
+      <h1>Pago de mensualidad</h1>
+      <form >
+        <div class="form-group">
+          @if(alertaDivisor)
+          {
+            <div class="error-message">
+              <p>        Cantidad a pagar no válida.        </p>
+            </div>
+          }
+          <button (click)="mensualidad()">abonar</button>
+        </div>
+      </form>
+    </div>
+    <div class="login-container">
+      <h1>Abono a capital</h1>
+      <form >
+        <div class="form-group">
+          <input type="text" [value]="dinero()" placeholder="Dígite el monto a pagar" (change)="changeDinero($event)">
+          <button (click)="abonoCapital()">Pagar</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
