--- a/starbank/src/app/domains/pages/creditsmenu/pages/car-credit/car-credit.component.html
+++ b/starbank/src/app/domains/pages/creditsmenu/pages/car-credit/car-credit.component.html
@@ -6,8 +6,8 @@
     <div class="showtop">
       <div class="form-group">
         <p>Meses faltantes : {{ 2 }}</p>
-        <p>Credito disponible : {{ 2 }}</p>
-        <p>Saldo por pagar: {{ 2 }}</p>
+        <p>Deuda inicial : {{ 2 }}</p>
+        <p>Deuda actual: {{ 2 }}</p>
       </div>
     </div>
     <div class="login-container">
